# chop

./: README.md  pgsql_import.sh
analysis/: README.md  analysis.py  bar_plot_exceptions.py  binja_canaries.py  db.py  dso_analysis.py  elf_info.py  enumerate_files.py  exceptioninfo_analysis.py  extract_files.py  fetch_packages.py  file_size_num_sinks.csv  import_packages_into_database.py  imports.csv  infer_library_distribution.py  requirements.txt  scatter_plot_size_gadgets.py  settings.py  stack_canaries_analysis.py  taint_size_connection.py  taint_statistics_ovr.py  throw_analysis.py  throw_statistics.py  total_catching_libs.csv
analysis/binja/: Makefile  Makefile.shablon  Readme.md  analysis.cpp  analysis.h  bvhelper.cpp  bvhelper.h  database.cpp  database.h  debug.h  globals.h  hlil_printer.cpp  hlil_printer.h  hlilcomparator.cpp  hlilcomparator.h  llil_printer.cpp  llil_printer.h  llil_registers.h  main.cpp  stack_analysis.cpp  stack_analysis.h  taint_analysis.cpp  taint_analysis.h  test_db.cpp  threat_analysis.cpp  threat_analysis.h  threat_analysis_ossfuzz.cpp  threat_analysis_ossfuzz.h  utils.h  wqueue.h
case_studies/cve-2009-4009/: Dockerfile  README.md  allow-personality-no-aslr.json  exploit.py  recursor.conf
case_studies/cve-2018-5809/: Dockerfile  README.md  libraw.so.16  raw-identify
case_studies/scssu-201801/: README.md  solve.py  virt_cacard.diff
pocs/ios-chop-tester/: README.md
pocs/sok_shadow_stacks/: Dockerfile  README.md  hexhive_con  hexhive_con.cpp  (+6 more)
tools/ehdump/: Cargo.toml  Readme.md
tools/ehdump/src/: db.rs  lib.rs  lsda.rs  main.rs
(+14 files in other folders)
