[package]
name = "ehdump"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[dependencies]
gimli = "0.26"
object = "0.26"
memmap = "0.7"
fallible-iterator = "0.2.0"
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
postgres = { version = "0.19.2", features = ["with-serde_json-1"] }
